@@ -71,12 +71,16 @@ wxZipFSHandler::wxZipFSHandler() : wxFileSystemHandler()
 
 wxZipFSHandler::~wxZipFSHandler()
 {
-    if (m_Archive)
-        delete m_Archive;
-    if (m_DirsFound)
-        delete m_DirsFound;
+    Cleanup();
 }
 
+
+void wxZipFSHandler::Cleanup()
+{
+    wxDELETE(m_Archive);
+    wxDELETE(m_DirsFound);
+}
+ 
 
 
 bool wxZipFSHandler::CanOpen(const wxString& location)
